Overlaping issues fixed

--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -1,5 +1,4 @@
 .about {
-    height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -7,6 +6,7 @@
     align-items: center;
     padding-top: 5rem;
     &__info {
+        font-size: 0.825rem;
         position: relative;
         width: 80%;
         height: 100%;
