--- a/scss/main.css
+++ b/scss/main.css
@@ -795,7 +795,7 @@ ul {
 }
 
 .project__start {
-  height: 70vh;
+  padding-top: 5rem;
   width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -811,6 +811,7 @@ ul {
 
 .project__start-info {
   font-size: 2.5rem;
+  padding-bottom: 10rem;
 }
 
 .project__start .scroll-down {
@@ -863,7 +864,6 @@ ul {
 }
 
 .about {
-  height: 100vh;
   width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -882,6 +882,7 @@ ul {
 }
 
 .about__info {
+  font-size: 0.825rem;
   position: relative;
   width: 80%;
   height: 100%;
@@ -1081,6 +1082,8 @@ ul {
 }
 
 .overlay {
+  overflow: auto;
+  padding-top: 10rem;
   height: 100%;
   width: 100%;
   -webkit-transform: translate(100%, 0);
